<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultadosOperaciones">

    <TextView
        android:id="@+id/lblOperacionesRelalizadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operaciones_realizadas"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tbtOperaciones"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/fleEnunciados"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblOperaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operacion"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblDato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dato"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultado"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

</LinearLayout>